tests/asm-link/use-purged-symbol/rgbasm.err
error: macro `m` does not exist
   ╭─[ test.asm:6:2 ]
   │
 5 │ PURGE m
   │       ┬  
   │       ╰── it has been deleted here
 6 │     m
   │     ┬  
   │     ╰── attempting to call the macro here
───╯
error: the symbol `argi` was deleted
    ╭─[ test.asm:10:12 ]
    │
 10 │     println "(\<argi>)!"
    │               ───┬───  
    │                  ╰───── this symbol is invalid
    │ 
 13 │     m2 hello
    │     ─┬  
    │      ╰── macro called here
────╯
error: the symbol `argi` was deleted
    ╭─[ test.asm:15:11 ]
    │
 12 │     PURGE argi
    │           ──┬─  
    │             ╰─── it has been deleted here
    │ 
 15 │ DEF n EQU argi
    │           ──┬─  
    │             ╰─── no symbol by this name exists at this point
────╯
error: the symbol `argi` was deleted
    ╭─[ test.asm:17:12 ]
    │
 17 │ PRINTLN "({argi})"
    │            ──┬─  
    │              ╰─── this interpolation is invalid
────╯
error: labels cannot be deleted
    ╭─[ test.asm:20:7 ]
    │
 20 │ PURGE Label
    │       ──┬──  
    │         ╰──── attempting to delete `Label` here
────╯
error: `Label` is not constant
    ╭─[ test.asm:21:9 ]
    │
 21 │ DEF x = Label
    │         ──┬──  
    │           ╰──── this symbol's value is not known at this point
────╯
error: labels cannot be deleted
    ╭─[ test.asm:25:7 ]
    │
 25 │ PURGE Label2
    │       ───┬──  
    │          ╰──── attempting to delete `Label2` here
────╯
error: A symbol called "x" already exists
    ╭─[ test.asm:26:7 ]
    │
 22 │ DEF x = BANK(Label)
    │       ┬  
    │       ╰── the name is defined here...
    │ 
 26 │ DEF x EQUS SECTION(Label2)
    │       ──┬─  
    │         ╰─── ...so it's not available for this definition
    │ 
    │ Help: If this is intentional, consider using `PURGE` to delete the old definition first
────╯
8 errors generated.
